<resources>
    <string name="app_name">好读</string>
    <string name="title_home">主页书城</string>
    <string name="title_dashboard">热门分类</string>
    <string name="title_notifications">个人中心</string>
    <string name="con_text">金币余额(币)</string>
    <string name="exchange">提取兑换</string>
    <string name="history">阅览历史</string>
    <string name="message">我的消息</string>
    <string name="other">其他</string>
    <string name="btn_man">男频</string>
    <string name="btn_woman">女频</string>

    <string name="classificationBtnCity">都市</string>
    <string name="classificationBtnXia">武侠</string>
    <string name="classificationBtnXian">奇幻仙侠</string>
    <string name="classificationBtnHistory">历史</string>
    <string name="classificationBtnGame">游戏体育</string>
    <string name="classificationBtnStrange">玄幻</string>
    <string name="classificationBtnScience">科幻</string>
    <string name="classificationBtnFarm">种田</string>
    <string name="classificationBtnDoomsday">末世</string>


    <string name="text_test">清风</string>
    <string name="num_test">999999+</string>
    <string name="btn_des">图片按钮</string>
    <string name="hint_account">账号</string>
    <string name="hint_password">密码</string>
    <string name="btn_login">登录</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_confirm">确定</string>
    <string name="editText">请输入...</string>
</resources>