<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editText"
        android:inputType="text" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:background="@drawable/btn_main"
            android:text="@string/btn_confirm"
            android:textSize="16sp"/>
        <Button
            android:id="@+id/btnEditCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/btn_main"
            android:text="@string/btn_cancel"
            android:textSize="16sp"/>
    </RelativeLayout>
</LinearLayout>