<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:padding="6dp">
    <RelativeLayout
        android:id="@+id/classificationTitleLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/classificationFragmentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_centerInParent="true"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/classificationTitleLay"
        android:layout_marginTop="2dp"
        android:padding="6dp">
        <Button
            android:id="@+id/classificationBtnCity"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:background="@drawable/btn_base"
            android:padding="2dp"
            android:text="@string/classificationBtnCity"
            android:gravity="center"
            android:textSize="15sp"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/classificationBtnXia"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:background="@drawable/btn_base"
            android:padding="2dp"
            android:text="@string/classificationBtnXia"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:textSize="15sp"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/classificationBtnXian"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:background="@drawable/btn_base"
            android:padding="2dp"
            android:text="@string/classificationBtnXian"
            android:gravity="center"
            android:layout_alignParentEnd="true"
            android:textSize="15sp"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/classificationBtnHistory"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:background="@drawable/btn_base"
            android:padding="2dp"
            android:text="@string/classificationBtnHistory"
            android:gravity="center"
            android:layout_below="@+id/classificationBtnCity"
            android:layout_marginTop="6dp"
            android:textSize="15sp"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/classificationBtnGame"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:background="@drawable/btn_base"
            android:padding="2dp"
            android:text="@string/classificationBtnGame"
            android:layout_below="@+id/classificationBtnXia"
            android:layout_marginTop="6dp"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:textSize="15sp"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/classificationBtnStrange"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:background="@drawable/btn_base"
            android:padding="2dp"
            android:text="@string/classificationBtnStrange"
            android:gravity="center"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/classificationBtnXian"
            android:layout_marginTop="6dp"
            android:textSize="15sp"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/classificationBtnScience"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:background="@drawable/btn_base"
            android:padding="2dp"
            android:text="@string/classificationBtnScience"
            android:gravity="center"
            android:layout_below="@+id/classificationBtnHistory"
            android:layout_marginTop="6dp"
            android:textSize="15sp"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/classificationBtnFarm"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:background="@drawable/btn_base"
            android:padding="2dp"
            android:text="@string/classificationBtnFarm"
            android:layout_below="@+id/classificationBtnGame"
            android:layout_marginTop="6dp"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:textSize="15sp"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/classificationBtnDoomsday"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:background="@drawable/btn_base"
            android:padding="2dp"
            android:text="@string/classificationBtnDoomsday"
            android:gravity="center"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/classificationBtnStrange"
            android:layout_marginTop="6dp"
            android:textSize="15sp"
            android:textColor="@color/black"/>

        <RelativeLayout
            android:id="@+id/hotTagLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/classificationBtnDoomsday"
            android:layout_marginTop="6dp"
            android:background="@drawable/lay_light">

        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>