<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notifications.NotificationsFragment">

    <!--信息View-->
    <RelativeLayout
        android:id="@+id/info_lay"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:padding="3dp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/lay_light"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/headView"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@mipmap/warning"
            app:civ_border_width="1dp"
            app:civ_border_color="#1A3C3C3C"/>
        <EditText
            android:id="@+id/name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@color/transparent"
            android:inputType="text"
            android:focusableInTouchMode="false"
            android:cursorVisible="false"
            android:text="@string/text_test"
            android:textSize="24sp"
            android:layout_toEndOf="@id/headView"
            android:layout_marginStart="6dp"
            tools:ignore="LabelFor" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@mipmap/vip_on"
            android:layout_toEndOf="@+id/headView"
            android:layout_below="@+id/name_text"
            android:contentDescription="@string/btn_des"/>

        <ImageButton
            android:id="@+id/name_edit_btn"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/btn_status_edit"
            android:layout_marginStart="6dp"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@+id/name_text"
            android:contentDescription="@string/btn_des" />

        <ImageButton
            android:id="@+id/setBtn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/btn_status_set"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="2dp"
            android:layout_marginTop="2dp"
            android:contentDescription="@string/btn_des" />
    </RelativeLayout>

    <!--金币View-->
    <RelativeLayout
        android:id="@+id/con_lay"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/lay_md_orange_100"
        app:layout_constraintTop_toBottomOf="@+id/info_lay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/con_linearLayout_1"
            android:layout_width="120dp"
            android:layout_height="70dp"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/con_text"/>
            <TextView
                android:id="@+id/con_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/num_test"
                android:textSize="20sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/con_linearLayout_2"
            android:layout_width="120dp"
            android:layout_height="70dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">
        </LinearLayout>

        <LinearLayout
            android:id="@+id/con_linearLayout_3"
            android:layout_width="120dp"
            android:layout_height="70dp"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/exchange_btn"
                android:background="@drawable/btn_status_exchange"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/btn_des" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/exchange"
                android:textSize="12sp"/>
        </LinearLayout>
    </RelativeLayout>

    <!--历史View-->
    <RelativeLayout
        android:id="@+id/read_history_lay"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/lay_md_amber_50"
        app:layout_constraintTop_toBottomOf="@+id/con_lay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/history_linearLayout_1"
            android:layout_width="120dp"
            android:layout_height="70dp"
            android:orientation="vertical"
            android:gravity="center">
            <ImageButton
                android:id="@+id/history_btn"
                android:background="@mipmap/history"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/btn_des" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/history"
                android:textSize="12sp"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/history_linearLayout_2"
            android:layout_width="120dp"
            android:layout_height="70dp"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:gravity="center">
            <ImageButton
                android:id="@+id/message_btn"
                android:background="@mipmap/message"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/btn_des" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/message"
                android:textSize="12sp"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/history_linearLayout_3"
            android:layout_width="120dp"
            android:layout_height="70dp"
            android:orientation="vertical"
            android:layout_alignParentEnd="true"
            android:gravity="center">
            <ImageButton
                android:id="@+id/other_btn"
                android:background="@mipmap/other"
                android:layout_width="24dp"

                android:layout_height="24dp"
                android:contentDescription="@string/btn_des" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/other"
                android:textSize="12sp"
                android:textStyle="bold"/>
        </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>